--- a/views/layouts/index-layout.ejs
+++ b/views/layouts/index-layout.ejs
@@ -109,6 +109,15 @@
                     </svg>
                     <span>Delivery Note</span>
                   </a>
+                  <a class="d-flex py-3 px-4 align-items-center text-decoration-none text-white fw-bold" href="warehousemovement">
+                    <svg class="me-3" width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M13.75 4.375H17.5" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M15.625 2.5V6.25" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M2.4209 16.8743C3.1893 15.5442 4.29419 14.4398 5.62456 13.672C6.95493 12.9042 8.46393 12.5 9.99997 12.5C11.536 12.5 13.045 12.9043 14.3754 13.6721C15.7057 14.44 16.8106 15.5444 17.579 16.8744" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M14.6915 9.23303C14.3573 10.1354 13.7696 10.9221 12.9991 11.4987C12.2286 12.0752 11.3081 12.417 10.348 12.483C9.38797 12.549 8.42929 12.3364 7.58713 11.8708C6.74498 11.4052 6.05517 10.7063 5.60058 9.85813C5.14599 9.00997 4.94595 8.04859 5.02449 7.0895C5.10303 6.1304 5.45682 5.21438 6.04334 4.45148C6.62987 3.68857 7.42419 3.11124 8.33088 2.78883C9.23757 2.46642 10.2181 2.41265 11.1546 2.63397" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                    <span>Warehouse</span>
+                  </a>
                 </div>
               </li>
               <li class="mb-2">
