Updated .gitignore to iglgfdkgsllmolo

--- a/views/setpassword.ejs
+++ b/views/setpassword.ejs
@@ -20,14 +20,15 @@
             
             <form action="/set-password" method="post">
               <input type="hidden" name="email" value="<%= email %>" />
+              <input type="hidden" name="key" value="<%= key %>" />
                 <div class="mb-6">
                   <label class="form-label" for="exampleForm1">Password</label>
-                  <input class="form-control" id="exampleForm1" type="password" name="new_password" placeholder="Enter Password">
+                  <input class="form-control" id="exampleForm1" type="password" name="new_password" placeholder="Enter Password" required>
                   <span toggle="#exampleForm1" class="password-toggle">Show</span>
                 </div>
                 <div class="mb-6">
                   <label class="form-label" for="exampleForm2">Confirm Password</label>
-                  <input class="form-control" id="exampleForm2" type="password" name="confirm_password" placeholder="Confirm Password">
+                  <input class="form-control" id="exampleForm2" type="password" name="confirm_password" placeholder="Confirm Password" required>
                   <span toggle="#exampleForm2" class="password-toggle">Show</span>
                 </div>
               
